fix light mode and dark mode

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,10 +1,3 @@
-:root {
-	color: var(--standard-ui-foreground-primary);
-	background-color: var(--standard-ui-background-primary);
-	font-family: var(--standard-ui-font-family-body);
-	font-size: var(--standard-ui-font-size);
-}
-
 * {
 	padding: 0;
 	margin: 0;
@@ -16,6 +9,13 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+}
+
+body {
+	color: var(--standard-ui-foreground-primary);
+	background-color: var(--standard-ui-background-primary);
+	font-family: var(--standard-ui-font-family-body);
+	font-size: var(--standard-ui-font-size);
 }
 
 h1,
