--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,29 +1,29 @@
-:root {
+body {
 	--standard-ui-space: 1rem;
 	--standard-ui-font-family-title: sans-serif;
 	--standard-ui-font-family-body: sans-serif;
 	--standard-ui-font-size: 12pt;
 
-	--standard-ui-background-primary: #1c1c1d;
-	--standard-ui-background-secondary: #222525;
-	--standard-ui-background-tertiary: #2a2c2e;
+	--standard-ui-background-primary: #f8f8f8;
+	--standard-ui-background-secondary: white;
+	--standard-ui-background-tertiary: #fdfdfd;
 
-	--standard-ui-foreground-primary: #c9cdce;
-	--standard-ui-foreground-secondary: #9da2a6;
-	--standard-ui-foreground-tertiary: #3d4040;
+	--standard-ui-foreground-primary: #3b3b3b;
+	--standard-ui-foreground-secondary: #545454;
+	--standard-ui-foreground-tertiary: #bababa;
 
-	--standard-ui-accent-background: #019cfd;
-	--standard-ui-accent-background-hover: #22a9fe;
-	--standard-ui-accent-text: black;
-	--standard-ui-accent-text-hover: black;
+	--standard-ui-accent-background: #1a73e8;
+	--standard-ui-accent-background-hover: #1a73e8;
+	--standard-ui-accent-text: white;
+	--standard-ui-accent-text-hover: white;
 
 	--standard-ui-danger-background: #fe5f57;
 	--standard-ui-danger-background-hover: #fe6f68;
 	--standard-ui-danger-text: black;
 	--standard-ui-danger-text-hover: black;
 
-	--standard-ui-warning-background: #febb2e;
-	--standard-ui-warning-background-hover: #fecc61;
+	--standard-ui-warning-background: #ff9800;
+	--standard-ui-warning-background-hover: #ff9800;
 	--standard-ui-warning-text: black;
 	--standard-ui-warning-text-hover: black;
 
@@ -31,27 +31,30 @@
 	--standard-ui-success-background-hover: #38d951;
 	--standard-ui-success-text: black;
 	--standard-ui-success-text-hover: black;
-
-	--standard-ui-border-primary: 0.125rem solid
-		var(--standard-ui-foreground-tertiary);
 }
 
-@media (prefers-color-scheme: light) {
-	:root {
-		--standard-ui-background-primary: #f8f8f8;
-		--standard-ui-background-secondary: white;
-		--standard-ui-background-tertiary: #fdfdfd;
+// Dark mode overrides
+@media (prefers-color-scheme: dark) {
+	body:not(.disable-dark-mode) {
+		--standard-ui-background-primary: #1c1c1d;
+		--standard-ui-background-secondary: #222525;
+		--standard-ui-background-tertiary: #2a2c2e;
 
-		--standard-ui-foreground-primary: #3b3b3b;
-		--standard-ui-foreground-secondary: #545454;
-		--standard-ui-foreground-tertiary: #bababa;
+		--standard-ui-foreground-primary: #c9cdce;
+		--standard-ui-foreground-secondary: #9da2a6;
+		--standard-ui-foreground-tertiary: #3d4040;
 
-		--standard-ui-accent-background: #1a73e8;
-		--standard-ui-accent-background-hover: #1a73e8;
-		--standard-ui-accent-text: white;
-		--standard-ui-accent-text-hover: white;
+		--standard-ui-accent-background: #019cfd;
+		--standard-ui-accent-background-hover: #22a9fe;
+		--standard-ui-accent-text: black;
+		--standard-ui-accent-text-hover: black;
 
-		--standard-ui-warning-background: #ff9800;
-		--standard-ui-warning-background-hover: #ff9800;
+		--standard-ui-warning-background: #febb2e;
+		--standard-ui-warning-background-hover: #fecc61;
 	}
+}
+
+body {
+	--standard-ui-border-primary: 0.125rem solid
+		var(--standard-ui-foreground-tertiary);
 }
